# martignac

./: .black  .coveragerc  .gitignore  .pre-commit-config.yaml  .ruff.toml  404.html  CITATION.cff  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yaml  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  test_requirements.txt  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  on-release-main.yml
dashboard/: config_st.yaml  dashboard.ipynb  debug_workflow.ipynb  home.py  init.py  init2.py  martignac.html  martignac.ipynb  streamlit_app.py
dashboard/pages/: 1_solute_generation.py  2_solvent_generation.py  3_solute_in_solvent_generation.py  4_solute_in_solvent_alchemical.py  5_bilayer_generation.py  6_solute_bilayer_umbrella.py
dashboard/view/: job
docs/: index.md  install.md  modules.md  quickstart.md  running_workflows.md
docs/liquid_models/: mixtures.md
docs/nomad/: datasets.md  entries.md  uploads.md  users.md  utils.md  workflows.md
docs/parsers/: gromacs_forcefields.md  gromacs_particle_definitions.md  gromacs_structures.md  gromacs_topologies.md
docs/utils/: dashboard.md  gromacs.md  insane.md  martini_flow_projects.md  misc.md  nomad.md  packmol.md
docs/workflows/: bilayer_generation.md  solute_generation.md  solute_in_bilayer_umbrella.md  solute_in_solvent_alchemical.md  solute_in_solvent_generation.md  solvent_generation.md
install/: index.html
liquid_models/mixtures/: index.html
martignac/: __init__.py  config_default.yaml  logging.py
martignac/liquid_models/: mixtures.py
martignac/nomad/: datasets.py  entries.py  mini_entries.py  queries.py  uploads.py  users.py  utils.py  workflows.py
martignac/parsers/: gromacs_forcefields.py  gromacs_particle_definitions.py  gromacs_structures.py  gromacs_topologies.py
martignac/utils/: dashboard.py  gromacs.py  insane.py  martini_flow_projects.py  misc.py  nomad.py  packmol.py
martignac/workflow_interfaces/: bilayer_generation.py  generic.py  solute_generation.py  solute_in_bilayer_umbrella.py  solute_in_solvent_alchemical.py  solute_in_solvent_generation.py  solvent_generation.py  utils.py
martignac/workflows/: alchemical_transformation.py  bilayer_generation.py  solute_generation.py  (+6 more)
quickstart/: index.html
running_workflows/: index.html
scripts/: nomad-connect.ipynb  tutorial.ipynb
search/: search_index.json
tests/: config_tests.yaml  conftest.py  test_foo.py  test_nomad.py  test_workflows.py
(+115 files in other folders)
