[tool.poetry]
name = "martignac"
version = "0.0.1"
description = "This is a template repository for Python projects that use Poetry for their dependency management."
authors = ["Tristan Bereau <bereau@thphys.uni-heidelberg.de>"]
repository = "https://lin0.thphys.uni-heidelberg.de:4443/bereau/martignac"
documentation = "https://lin0.thphys.uni-heidelberg.de:4443/bereau/martignac"
readme = "README.md"
packages = [
  {include = "martignac"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
signac = "^2.0.0"
signac-flow = "^0.25.1"
numpy = "^1.25.0"
regex = "^2023.6.3"
pymbar = "^4.0.1"
jupyter = "^1.0.0"
pandas = "^2.0.2"
h5py = "^3.9.0"
signac-dashboard = "^0.5.0"
alchemlyb = "^2.1.0"
networkx = "^3.1"
confuse = "^2.0.1"
mdanalysis = "^2.6.1"
python-decouple = "^3.8"
marshmallow-dataclass = "^8.6.0"
cachetools = "^5.3.2"
isort = "^5.8.0"
insane = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.6.4"
mypy = "^0.981"
pre-commit = "^2.20.0"
tox = "^3.25.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.mypy]
files = ["martignac"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    "S101",
    "A003",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["martignac"]

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility/
profile = "black"